fixed spacing issues above nav bar for all pages

--- a/app/assets/stylesheets/expense_categories.css
+++ b/app/assets/stylesheets/expense_categories.css
@@ -1,11 +1,15 @@
+html {
+  margin: 0;
+  padding: 0;
+}
 * {
   text-decoration: none;
 }
 body {
   margin: 0;
   padding: 0;
-      min-height:100%;
 }
+
 tbody tr td {
     font-family: Young;
   /*font-family: Porter;*/
